# ULTRON-PHASE-1

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  render.yaml  ultron_bridge.py  ultron_colab_bridge.py
.github/workflows/: deploy-dashboard.yml
docs/: API.md  DATABASE.md  DECISIONS.md  DEPLOYMENT.md  GLOSSARY.md  HANDOFF.md  HARDWARE.md  MACHINES.md  MODBUS.md  PROCESS_OVERVIEW.md  PROTOCOLS.md  ROADMAP.md  SECURITY.md  SENSORS.md  SOFTWARE.md  SYSTEM_ARCHITECTURE.md  TESTING.md  UI_UX.md
scripts/: start-dev.sh
ultron-backend/: .env.example  .env.hardware  Dockerfile  README.md  package-lock.json  requirements.txt  start.sh  start_backend.bat
ultron-backend/app/: __init__.py  asset_hierarchy.py  bridge_manager.py  config.py  database.py  device_registry.py  logger.py  main.py  models.py  sensor_manager.py  websocket_manager.py
ultron-backend/data/: ultron.db-shm  (+1 more)
ultron-dashboard/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vercel.json  vite.config.ts  vite.config.ts.timestamp-1781209719785-2e74acb25231f.mjs
ultron-desktop/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ultron-desktop/src-tauri/: Cargo.toml  tauri.conf.json
ultron-desktop/src-tauri/capabilities/: default.json
ultron-desktop/src-tauri/icons/: icon.icns
ultron-desktop/src-tauri/src/: backend_manager.rs  commands.rs  config_store.rs  device_discovery.rs  main.rs  modbus_discovery.rs  modbus_reader.rs
ultron-discovery/: discovery_agent.py  requirements.txt
(+21 files in other folders)
