[package]
name = "ultron-desktop"
version = "1.0.0"
edition = "2021"
description = "ULTRON Industrial Control System — Desktop Application"
authors = ["Oswar Software"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri         = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs    = "2"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
tokio         = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "macros"] }
reqwest       = { version = "0.12", default-features = false, features = ["json", "native-tls"] }

[target.'cfg(target_os = "windows")'.dependencies]
# winapi provides CREATE_NO_WINDOW flag access via CommandExt
# (std::os::windows::process::CommandExt is in std, no extra dep needed)

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
